2004-07-22  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* libc/stdio/fputs_p.c: pgm_read_byte(p++) -> pgm_read_byte(p) ... p++;
	* libc/stdio/puts_p.c: Ditto.
	* libc/stdio/vfprintf.c: Ditto.
	* libc/stdio/vfscanf.c: Ditto.

2004-07-21  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* doc/api/faq.dox: Fix the use of progmem tables, closes
	savannah bug #9669.

2004-07-21  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* doc/examples/demo.c: Update for ATmega32

2004-07-21  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* libc/stdio/fputs_p.c: replace PRG_RDB by pgm_read_byte
	* libc/stdio/puts_p.c: Ditto.
	* libc/stdio/vfprintf.c: Ditto.
	* libc/stdio/vfscanf.c: Ditto.

2004-07-20  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* libm/fplib/strtod.S: fix parsing of a partial
	exponent, fix *endp return value (savanna bug #2924)

2004-07-17  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* libm/fplib/pow.S: localize labels, fix pow(N, 0).

2004-07-10  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* include/inttypes.h: avr-gcc >= 3.5 will be able to
	provide [u]int32_t when -mint8 is in effect.

2004-07-02  Theodore A. Roth  <troth@openavr.org>

	* xml/Atmel2libc.py: Add copyright/license.
	Tweaks to handle inconsistencies in Atmel's files.
	* xml/Desc-parser.py: New file.
	* xml/Device.dtd: Make rww_start and rww_end optional since some
	devices don't have rww.
	* xml/Validate.py: Allow shell gobbing to work so you can validate more
	than one file at a time.

2004-06-30  Theodore A. Roth  <troth@openavr.org>

	* xml/Atmel2libc.py: Work around bugs in Atmel's xml files.
	* xml/Device.dtd: Change order of nrww and rww bootloader attributes.

2004-06-30  Theodore A. Roth  <troth@openavr.org>

	* xml/Atmel2libc.py: Add code to handle the boot loader information.
	* xml/Device.dtd: Add bootloader element.

2004-06-23  Theodore A. Roth  <troth@openavr.org>

	* xml/Atmel2libc.py (gather_io_info): New function.
	(dump_ioregs): Implement dumping ioregisters.