@@ -1,5 +1,10 @@
 2004-07-22  Joerg Wunsch <j.gnu@uriah.heep.sax.de>
 
+	* include/stdio.h: Doc update: binary vs. raw streams explained,
+	fix for savannah bug #9704.
+
+2004-07-22  Joerg Wunsch <j.gnu@uriah.heep.sax.de>
+
 	* libc/stdio/fputs_p.c: pgm_read_byte(p++) -> pgm_read_byte(p) ... p++;
 	* libc/stdio/puts_p.c: Ditto.
 	* libc/stdio/vfprintf.c: Ditto.
